- Bugfix parameter substitution; wrong checks for parameter count,
  and tampered sql var forgotten.
- MariaDb result false/null checks when using result loader.
- Result nextSet() and nextRow() return boolean; only, not null for none.
- Result methods must be documented as throwing non-specific db runtime
  exception, to allow for exception type mapping; errorsToException().

SimpleComplex/Database 1.x, 2018-05-11
--------------------------------------
- MariaDb prepared statement must not use cursor mode 'store', because then
  result binding is the only way to go - and result binding sucks IMHO.
- Turn off re-connection permanently when a query uses unbuffered cursor mode.
- Client getConnection() must not throw exception.

SimpleComplex/Database 1.x, 2018-05-10
--------------------------------------
- MariaDb client: there's no means of getting native error until successful
  connection.
- NB: MySQLi multi-query isn't executed until getting result set.
- Classify native error codes, to discern connection|query|result error
  in places where ambiguous.
- Query statementClosed must remain null if no statement (successfully) opened.
- MariaDb result fix setIndex/rowIndex.
- Result logger prepend 'result[setIndex][rowIndex]' to 'method'.

SimpleComplex/Database 1.x, 2018-05-06
--------------------------------------
- Result set index initial value -1.
  Native row fetching methods implicitly go to first result set; unless moved.
- Result nextSet/nextRow() shall optionally not throw exception on error.
- Query constructor must trim arg sql before checking for emptyness.
- Error message prefix is now Database[client name][rmdbs type][database name].
- Do NOT close statement/free result before getting native error.
- MariaDb query must have own nativeError() because \mysqli_stmt has own
  separate error list.
- Result fetchField method, which gets value; not column metadata.
- Aborted columnMetadata() method, because for Sqlsrv it's a query thing