@@ -7,6 +7,7 @@ SimpleComplex/Database 1.x, 2018-05-12
 - Result nextSet() and nextRow() return boolean; only, not null for none.
 - Result methods must be documented as throwing non-specific db runtime
   exception, to allow for exception type mapping; errorsToException().
+- Abstract classes renamed; from 'Database...' to 'Db...'.
 
 SimpleComplex/Database 1.x, 2018-05-11
 --------------------------------------
